k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: val-api
  namespace: val-api
spec:
  type: ClusterIP
  selector: { app: val-api }
  ports:
    - name: http
      port: 80
      targetPort: 3000
