k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: val-api
  namespace: val-api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: val-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: val-api
                port: { number: 80 }
